Completed refactor. Still working out misc bugs